--- a/app/assets/stylesheets/stickies.scss
+++ b/app/assets/stylesheets/stickies.scss
@@ -1,3 +1,24 @@
-// Place all the styles related to the Stickies controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: https://sass-lang.com/
+.bulletin{
+    width: 98%;
+    height: 40%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+    
+}
+.sticky_note{
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:rgb(246, 246, 180);
+    border: solid black 2px;
+    box-shadow: 5px 10px;
+    border-radius: 5%;
+    margin: 10px;
+
+
+}
