--- a/app/views/stickies/index.html.erb
+++ b/app/views/stickies/index.html.erb
@@ -3,7 +3,17 @@
 <div class="bulletin">
     <% @all_stickies.each do | entry | %>
         <div class="sticky_note">
-            <%= entry.body %>
+        <div>
+            <form method= "post" action= "/delete/<%=entry.id%> ">
+                <button class="delete_button" type="submit">X</button>
+
+                <input type="hidden" name="authenticity_token" id="authenticity_token" value="<%= form_authenticity_token %>">
+
+            </form>
+        </div>
+            <div class="content">
+                    <%= entry.body %>
+                </div>
         </div>
     <% end %>
 </div>
