--- a/app/assets/stylesheets/stickies.scss
+++ b/app/assets/stylesheets/stickies.scss
@@ -6,7 +6,7 @@
     flex-wrap: wrap;
     
     border: solid black 5px;
-    background-image: url(asset_path('images/bulletin.png'));
+    background-image: url(bulletin.png);
 }
 .sticky_note{
     width: 150px;
