--- a/app/views/stickies/index.html.erb
+++ b/app/views/stickies/index.html.erb
@@ -23,10 +23,10 @@
 <div class="note_pad"> 
     <form method= "post" action= "/save">
 
-        <div>
+        <%# <div>
             <label> Title:</label>
             <input type="text" name="title"> 
-        </div>
+        </div> %>
 
         <div>
             <label> Body:</label>
