--- a/app/views/stickies/index.html.erb
+++ b/app/views/stickies/index.html.erb
@@ -27,21 +27,29 @@
 <div class="desk"> 
     <form method= "post" action= "/save">
 
-        <%# <div>
-            <label> Title:</label>
-            <input type="text" name="title"> 
-        </div> %>
 
+        
+        
+        
+        
         <div>
-            <textarea class= "notepad" id="contents" name="body"> </textarea>
+            <input class= "notepad" id="myInput" placeholder="Some text.." value="" name = "body">
+            
         </div>
 
-        <div>
-            <button type="submit">Save!</button>
-        </div>
 
         <input type="hidden" name="authenticity_token" id="authenticity_token" value="<%= form_authenticity_token %>">
 
     </form>
 </div>
 </body>
+
+<script>
+var input = document.getElementById("myInput");
+input.addEventListener("keyup", function(event) {
+    if (event.keyCode === 13) {
+        event.preventDefault();
+        document.getElementById("myInput").click();
+    }
+});
+</script>
