--- a/app/assets/stylesheets/stickies.scss
+++ b/app/assets/stylesheets/stickies.scss
@@ -1,36 +1,43 @@
-.header{
+body{
+    margin: 0;
     display:flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image: url(wonderwall.png);
+    background-size: cover;
 }
 .space{
-    width:auto;
+    width: 100vw;
     height: 200px;
-    background-color: white;
-}
-.pens{
-    width: auto;
-    height: 100%;
-    // background-image: url(pens.png);
-    // background-size: cover;
-    border: solid black 2px;
 }
 
 .bulletin{
-    width: 98%;
-    height: 40%;
+    width: 90vw;
+    
+    height: 60vh;
+    
+    overflow: auto;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    border: solid black 5px;
     background-image: url(bulletin.png);
+    border-style: outset;
+    border-color: slategrey;
+    border-width: 5px;
+    border-radius: 5px;
+    
+
 }
 .desk {
     width: 100vw;
     height: 40vh;
     background-image: url(desk.png);
-    background-size: cover;
+    background-size: 100% 100%;
     display: flex;
     justify-content: center;
+    margin-bottom: 0;
+    
     
 }
 .notepad {
@@ -38,7 +45,7 @@
     height: 200px;
     background-color:rgb(246, 246, 180);
     border: solid black 2px;
-    box-shadow: 2px 5px #888888;
+    box-shadow: 0px 10px rgb(248, 248, 217) ;
     border-radius: 5%;
     transform:perspective(200px) rotateX(30deg);
     font-size:x-large;
