First commit to github.

--- a/app/views/stickies/index.html.erb
+++ b/app/views/stickies/index.html.erb
@@ -40,11 +40,11 @@
 
 
 <script>
-var input = document.getElementById("myInput");
-input.addEventListener("keyup", function(event) {
-    if (event.keyCode === 13) {
-        event.preventDefault();
-        document.getElementById("myInput").click();
-    }
-});
+// var input = document.getElementById("myInput");
+// input.addEventListener("keyup", function(event) {
+//     if (event.keyCode === 13) {
+//         event.preventDefault();
+//         document.getElementById("myInput").click();
+//     }
+// });
 </script>
